--- a/pom.xml
+++ b/pom.xml
@@ -22,37 +22,66 @@
 	</properties>
 	
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
-		</dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.projectlombok</groupId>
+	      <artifactId>lombok</artifactId>
+	      <version>1.18.22</version>
+	      <scope>provided</scope>
+	      <optional>true</optional>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-test</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>io.springfox</groupId>
+	      <artifactId>springfox-swagger2</artifactId>
+	      <version>2.9.2</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>io.springfox</groupId>
+	      <artifactId>springfox-swagger-ui</artifactId>
+	      <version>2.9.2</version>
+	    </dependency>
 	
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
-</project>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-jdbc</artifactId>
+	    </dependency>
+	
+	    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+	    <dependency>
+	      <groupId>org.mariadb.jdbc</groupId>
+	      <artifactId>mariadb-java-client</artifactId>
+	      <version>2.7.3</version>
+	    </dependency>
+	
+	  </dependencies>
+	
+	  <build>
+	    <plugins>
+	      <plugin>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-maven-plugin</artifactId>
+	        <configuration>
+	          <excludes>
+	            <exclude>
+	              <groupId>org.projectlombok</groupId>
+	              <artifactId>lombok</artifactId>
+	            </exclude>
+	          </excludes>
+	        </configuration>
+	      </plugin>
+	    </plugins>
+	  </build>
+	</project>
