--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-jdbc</artifactId>
 	    </dependency>
+	     
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-validation</artifactId>
+	    </dependency>
 	
 	    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
 	    <dependency>
