--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,6 @@
 	    <dependency>
 	      <groupId>org.projectlombok</groupId>
 	      <artifactId>lombok</artifactId>
-	      <version>1.18.22</version>
 	      <scope>provided</scope>
 	      <optional>true</optional>
 	    </dependency>
@@ -70,6 +69,12 @@
 	      <artifactId>mariadb-java-client</artifactId>
 	      <version>2.7.3</version>
 	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+	  	</dependency>
 	
 	  </dependencies>
 	
@@ -87,6 +92,28 @@
 	          </excludes>
 	        </configuration>
 	      </plugin>
+	      
+	      <!--  
+	      <plugin>
+	      	<groupId>org.jacoco</groupId>
+	      	<artifactId>jacoco-maven-plugin</artifactId>
+	      	<version>0.8.5</version>
+	      	<executions>
+	      		<execution>
+	      			<goals>
+	      				<goal>prepare-agent</goal>
+	      			</goals>
+	      		</execution>
+	      		<execution>
+	      			<id>report</id>
+	      			<phase>test</phase>
+	      			<goals>
+	      				<goal>report</goal>
+	      			</goals>
+	      		</execution>
+	      	</executions>
+	      </plugin>
+	      -->
 	    </plugins>
 	  </build>
 	</project>
