단축 URL 작업 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.root=info
+
+## Custom Property
+around.hub.short.url.id=UfSPZWCjoXMOQ7HdLpKf
+around.hub.short.url.secret=kLlb5kv4HB
